@@ -1,7 +1,7 @@
 Package: RcppBDT
 Type: Package
 Title: Rcpp bindings for the Boost Date_Time library 
-Version: 0.0.1
+Version: 0.0.2
 Date: $Date$
 Author: Dirk Eddelbuettel and Romain Francois
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
@@ -9,8 +9,12 @@ Description: This package provides R with access to Boost Date_Time
  functonality by using Rcpp modules. 
  .
  Currently only Date functionality is covered.
+ .
+ Boost header files are needed to build the package. Linking is optional and
+ provides supplmentary date to/from strings conversion functions.
 License: GPL (>= 2)
 LazyLoad: yes
 Depends: Rcpp (>= 0.9.0), methods
+SystemRequirements: Boost 
 LinkingTo: Rcpp
 
