@@ -1,3 +1,14 @@
+2011-01-06  Dirk Eddelbuettel  <edd@dexter>
+
+	* inst/include/RcppBDT.h: Added paragraph about the UseWithString
+	variable with governs whether input/output functionality is loaded
+	which then requires linking with the Boost Date_Time library. Default
+	is just templates and no input/output given just basic date conversion
+	but no parsing from or formatting to string.
+
+	* DESCRIPTION: Expanded Description, mentioned optional linking of
+	Boost library to get string to/from date conversion functionality
+
 2011-01-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/RcppBDT.cpp: Expose new functions to compute IMM date (third
